--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,7 @@ div.input-container {
   padding: 15px 10px;
   /* bottom: 0; */
   /* position: fixed; */
+  /* width: 21%; */
   background-color: #c9c9c91f;
   border-radius: 15px;
   margin: 5px 15px;
@@ -202,7 +203,13 @@ div.predefined-questions-child:hover {
   padding: 15px 10px;
   /* bottom: 0; */
   /* position: fixed; */
+  /* width: 21%; */
   background-color: #c9c9c91f;
   border-radius: 15px;
   margin: -25px 15px;
+}
+div.heading-div {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
