--- a/src/style.css
+++ b/src/style.css
@@ -3,26 +3,7 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-::-webkit-scrollbar {
-  width: 10px;
-}
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #8e0b618f;
-  border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
-}
 .ant-btn-primary {
   background-color: rgb(142, 11, 97);
 }
@@ -212,4 +193,23 @@ div.heading-div {
   display: flex;
   width: 100%;
   justify-content: space-between;
+}
+
+#pop-widget {
+  left: 79%;
+  top: 32%;
+  transform-origin: 352px 571.312px;
+  position: fixed;
+}
+
+.Spinner {
+  width: 100%;
+  margin-top: 50%;
+}
+
+.ant-popover {
+  left: 162.5vh !important;
+  margin-top: 32vh !important;
+  top: 0px !important;
+  position: fixed;
 }
